--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,21 @@
     <meta name="theme-color" content="#ffffff" />
 
     <title>ROR2 Items</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=UA-128495649-2"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-128495649-2");
+    </script>
   </head>
   <body>
     <noscript>
