--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,15 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta name="author" content="ocboogie" />
+    <meta
+      name="description"
+      content="Risk of Rain 2 items stats, descriptions, unlocks and more"
+    />
+    <meta
+      name="keywords"
+      content="risk of rain 2, items, stats, descriptions, unlocks, cheat sheet"
+    />
     <link
       rel="apple-touch-icon"
       sizes="180x180"
