Change some wording, title, meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="ocboogie" />
     <meta
       name="description"
-      content="Risk of Rain 2 items stats, descriptions, unlocks and more"
+      content="Risk of Rain 2 items unlocks, stats, descriptions and more."
     />
     <meta
       name="keywords"
@@ -39,7 +39,7 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>ROR2 Items</title>
+    <title>Risk of Rain 2 Unlocks</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
@@ -59,8 +59,8 @@
   <body>
     <noscript>
       <strong>
-        We're sorry but ROR2 Items doesn't work properly without JavaScript
-        enabled. Please enable it to continue.
+        We're sorry but Risk of Rain Unlocks doesn't work properly without
+        JavaScript enabled. Please enable it to continue.
       </strong>
     </noscript>
     <div id="app"></div>
