--- a/public/index.html
+++ b/public/index.html
@@ -7,11 +7,11 @@
     <meta name="author" content="ocboogie" />
     <meta
       name="description"
-      content="Risk of Rain 2 items unlocks, stats, descriptions and more."
+      content="Risk of Rain 2 cheat sheet with items unlocks, stats, descriptions and more."
     />
     <meta
       name="keywords"
-      content="risk of rain 2, items, stats, descriptions, unlocks, cheat sheet"
+      content="risk of rain 2, ror2, items, stats, descriptions, unlocks, cheat sheet"
     />
     <link
       rel="apple-touch-icon"
